apps/01-istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: default-https-gateway
spec:
  selector:
    istio: ingressgateway  # Use Istio's default ingress gateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: home-cert-tls  # Must match the secret name in istio-system
      hosts:
        - "*.home.alden.ai"
